--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
                 color: white;
             }
             body{
-                background-color: rgb(245, 580, 62);
+                background-color: rgb(62, 62, 62);
             }
         </style>
     </head>
@@ -30,7 +30,7 @@
                 <em><p>*You can also go swimming with sharks!</p></em>
                 
             <li>Eat the variety of food available</li>
-                <img src = "https://www.kasandbox.org/programming-images/food/fish_grilled-snapper.png" alt = "fish with a salad on the side" width = "200px">
+                <img src = "http://www.trevorjonesltd.co.uk/images/Yamaha-6335-Trumpet.jpg" alt = "a picture of a trumpet" width = "200px">
                 <em><p>*There are many different things available to eat like fish or exotic fruit!</p></em>
             
         <strong><p>Hawaii is a wonderful place to go on vaction. There are many things to do and experience!</p></strong>
