--- a/home.html
+++ b/home.html
@@ -13,6 +13,9 @@
             .hobbies{
                 color: rbg(99, 6, 9);
             }
+            .hobbies{
+            background-color: green
+            }
         </style>
     </head>
     <body>
